foto principal y cambios de texto banner principal

--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">    
 
-  <!-- =======================================================
-    Theme Name: NewBiz
-    Theme URL: https://bootstrapmade.com/newbiz-bootstrap-business-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
 </head>
 
 <body>
@@ -74,11 +68,11 @@
     <div class="container">
 
       <div class="intro-img">
-        <img src="img/intro.png" alt="" class="img-fluid">
+        <img src="img/22379572_6597482.jpg" alt="" class="img-fluid">
       </div>
 
       <div class="intro-info">
-        <h2>Quieres tener mas<br><span>clientes efectivos</span><br>para tu negocio?</h2>
+        <h2>Automatiza tu procesos con <br><span>RPA</span><br> en  tu empresa</h2>
         <div>
           <a href="#contact" class="btn-get-started scrollto">Contactanos</a>
           <a href="#winner" class="btn-services scrollto">Leer mas</a>
