cambio texto pestaña inicio

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <img src="img/22379572_6597482.jpg" alt="" class="img-fluid">
       </div>
 
-      <div class="intro-info">
-        <h2>Automatiza tu procesos con <br><span>RPA</span><br> en  tu empresa</h2>
+      <div class="intro-info">          
+        <h2>Impulsamos tu <br/>Éxito Empresarial con<br/><span>RPA</span></h2>
         <div>
           <a href="#contact" class="btn-get-started scrollto">Contactanos</a>
           <a href="#winner" class="btn-services scrollto">Leer mas</a>
@@ -92,30 +92,35 @@
 
         <header class="section-header">
           <br/>
-          <h3>Quieres Ganar mas Clientes?</h3>
-          <p>Estas interesado en generar mas interaccion de tu producto o servicio con clientes y de esa manera ganas mas clientes, consulta con un Asesor para ayudarte con ese proceso.</p>
+          <h3>Automatización Inteligente con RPA</h3>
+          <p>Simplifica tus procesos, optimiza la eficiencia y ahorra tiempo.</p>
         </header>
 
         <div class="row about-container">
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <p>
-              Nuestro objetivo es ayudarte a encontrar tu cliente ideal, con nuestro sistema podras traer nuevos clientes a tu empresa.
+              Descubre cómo nuestra experiencia en RPA puede transformar tu negocio.
             </p>
 
             <div class="icon-box wow fadeInUp">              
-              <h4 class="title">Que es una Lead</h4>
-              <p class="description">Una lead o una oportunidad, es una persona o entidad que tiene un genuino interes en conocer tu producto o servicio.</p>
+              <h4 class="title">Eficiencia Mejorada</h4>
+              <p class="description">Automatiza tareas repetitivas y liberar el tiempo de tu equipo para tareas más estratégicas.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">              
-              <h4 class="title">Que hacer con una Lead</h4>
-              <p class="description">Cuando tienes e identificas una lead, lo primero que debes hacer es comunicarte para conocer su necesidad y poder transformalo en un cliente.</p>
+              <h4 class="title">Ahorro de Costos</h4>
+              <p class="description">Reduce los gastos operativos al minimizar errores y aumentar la productividad.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">              
-              <h4 class="title">Como puedo adquirir un cliente</h4>
-              <p class="description">Con nuestro guia, puedes generar estrategias efectivas, para conocer leads con una genuina necedidad de tu producto o servicio, que pueden convertir en clientes mas facilmente.</p>
+              <h4 class="title">Precisión y Calidad</h4>
+              <p class="description">Elimina errores humanos y asegura una calidad consistente en cada proceso.</p>
+            </div>
+
+            <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">              
+              <h4 class="title">Escalar sin Esfuerzo</h4>
+              <p class="description">Escala tu negocio sin necesidad de aumentar significativamente el personal.</p>
             </div>
 
           </div>
